# terminal-zagruzka

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
scripts/: preview.py
src/terminal_zagruzka/: __init__.py  __main__.py  app.py  art.py  cli.py  downloader.py  ui.py
tests/: test_cli.py  test_downloader.py  test_mediainfo.py  test_ui_and_app.py
